# dji-moonlight-shim

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_ipk.sh  build_ipkg.sh
.github/workflows/: build.yml
assets/: dejavusans.fnt
ipk/control/: conffiles  control  postinst  preinst
ipk/data/opt/etc/dinit.d/: dji-moonlight-shim  moonlight-shim
ipk/data/opt/etc/package-config/dji-moonlight-shim/: config.json  schema.json  schemaV2.json
ipk/data/opt/share/applications/: dji-moonlight-shim.desktop  moonlight-shim.desktop
src/: gfx.c  gfx.h  main.c
src/dmi/: dji_media.c  dji_media.h  dmi_pb.c  dmi_pb.h  duss_media.h  shram.c  shram.h
src/hw/: dji_display.c  dji_display.h  dji_services.c  dji_services.h  duml_hal.h
